WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131598
MallocBench record/replay should support realloc
https://bugs.webkit.org/show_bug.cgi?id=131598
Summary
MallocBench record/replay should support realloc
Geoffrey Garen
Reported
2014-04-13 16:10:57 PDT
MallocBench record/replay should support realloc
Attachments
Patch
(7.68 KB, patch)
2014-04-13 16:13 PDT
,
Geoffrey Garen
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2014-04-13 16:13:12 PDT
Created
attachment 229247
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-13 16:14:25 PDT
Attachment 229247
[details]
did not pass style-queue: ERROR: PerformanceTests/MallocBench/MallocBench/Interpreter.h:39: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2014-04-13 16:21:42 PDT
Committed
r167203
: <
http://trac.webkit.org/changeset/167203
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug