MallocBench record/replay should support realloc https://bugs.webkit.org/show_bug.cgi?id=131598

Reviewed by Ryosuke Niwa.

* MallocBench/MallocBench.xcodeproj/project.pbxproj: Fixed some linkage
issues that caused us not to fully link to system malloc in the default
case. Also marked mbmalloc.dylib as required so the error message will
be clearer if we mess up.

* MallocBench/MallocBench/Interpreter.cpp:
(Interpreter::run):
* MallocBench/MallocBench/Interpreter.h: Added the realloc case, and
upgraded one-letter names to full words.


Canonical link: https://commits.webkit.org/149671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167203 268f45cc-cd09-0410-ab3c-d52691b4dbfc